hphp/test/slow/enum_class/enum_class14.php.expectf
Fatal error: '__Atom' applied to a non-HH\EnumMember parameter in %s/enum_class14.php on line 11
